--- a/script/RNotebook/additional240720/articulation.Rmd
+++ b/script/RNotebook/additional240720/articulation.Rmd
@@ -6,7 +6,7 @@ editor_options:
   chunk_output_type: inline
 ---
 
-Description: This is a summary of all analyses for articulation.
+Description: This is a summary of all analyses for articulation. **Add excluded 14 participants.**
 
 - Last checked: `r format(Sys.Date(), "%d-%b-%Y")`
 
