move a file into filtered
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/script/R/preprocessor/filtered/error_summary.Rmd
+++ b/script/R/preprocessor/filtered/error_summary.Rmd
@@ -12,10 +12,6 @@ if (!require("data.table")) {install.packages("data.table"); require("data.table
 # plot
 if (!require("ggplot2")) {install.packages("ggplot2"); require("ggplot2")}
 if (!require("ggsignif")) {install.packages("ggsignif"); require("ggsignif")}
-# statistics
-if (!require("stats")) {install.packages("stats"); require("stats")}
-if (!require("effsize")) {install.packages("effsize"); require("effsize")}
-if (!require("ez")) {install.packages("ez"); require("ez")}
 
 # function
 source("./function.R")
@@ -26,16 +22,15 @@ colnames(dt_ideal) <- "Pitch"
 dt_ideal$RowNr <- 1:nrow(dt_ideal)
 setcolorder(dt_ideal, c(2, 1))
 # 
-dt_onset <- fread(file = "./filtered/dt_correct_onset.txt", sep = ",")
-dt_offset <- fread(file = "./filtered/dt_correct_offset.txt", sep = ",")
-error_onset <- fread(file = "./filtered/error_onset.txt", sep = ",")
-error_offset <- fread(file = "./filtered/error_offset.txt", sep = ",")
+dt_onset <- fread(file = "./dt_correct_onset.txt", sep = ",")
+dt_offset <- fread(file = "./dt_correct_offset.txt", sep = ",")
+error_onset <- fread(file = "./error_onset.txt", sep = ",")
+error_offset <- fread(file = "./error_offset.txt", sep = ",")
 ```
 
 - Each performance (1 trial) contains 67 responses for onsets and 67 responses for offsets (i.e., if there is no mistake, 134 responses in total)
 - Each block contains 8 trials and there are 4 blocks (teaching vs. performing x articulation vs. dynamics)
-
-- Note: SubNr 8 was already excluded because of an experimental error
+- Note: SubNr 8 was already excluded due to an experimental error
 
 # Outline
 1. [Onset reports](#onset)
@@ -43,20 +38,20 @@ error_offset <- fread(file = "./filtered/error_offset.txt", sep = ",")
 
 ## ONSET
 ### Corrected Error Onset (All)
-```{r onset_all, echo = FALSE}
+```{r onset-all, echo = FALSE}
 error_onset_all <- error_onset[CorrectionNr != "Exclude",]
 error_onset_all
 ```
 
 ### Corrected Error Onset (Summary)
-```{r onset_summary, echo = FALSE}
+```{r onset-summary, echo = FALSE}
 error_onset_all[startsWith(Reason, "Substituted")]$Reason <- "Substituted"
 error_onset_summary <- error_onset_all[, .(N = .N, Sum = sum(as.numeric(CorrectionNr))), by = .(Reason)]
 error_onset_summary
 ```
 
 ### Missing/Excluded Trials Onset (All)
-```{r na_onset_all, echo = FALSE}
+```{r na-onset-all, echo = FALSE}
 missing_onset <- checker(dt_onset, dt_ideal)
 missing_onset
 ```
@@ -65,19 +60,18 @@ missing_onset
 
 - SubNr 3: experimental error (8 trials)
 - SubNr 14: played in octave higher (8 trials)
-(- SubNr 8 was already excluded because of an experimental error)
 
 2. **some performances were removed because 1) participants didn't follow sheet music or 2) participants didn't finish till the end (5 trials)**
 
 ### Missing/Excluded Trials Onset (Summary)
-```{r na_onset_summary, echo = FALSE}
+```{r na-onset-summary, echo = FALSE}
 missing_onset_summary <- missing_onset[, .(N = .N), by = .(Reason)]
 missing_onset_summary
 ```
 
 ## OFFSET
 ### Corrected Error Offset (All)
-```{r offset_all, echo = FALSE}
+```{r offset-all, echo = FALSE}
 error_offset_all <- error_offset[CorrectionNr != "Exclude",]
 
 # separate errors depending on reasons
@@ -98,14 +92,14 @@ error_offset_all
 ```
 
 ### Corrected Error Offset (Summary)
-```{r offset_summary, echo = FALSE}
+```{r offset-summary, echo = FALSE}
 error_offset_all[startsWith(Reason, "Substituted")]$Reason <- "Substituted"
 error_offset_summary <- error_offset_all[, .(N = .N, Sum = sum(as.numeric(CorrectionNr))), by = .(Reason)]
 error_offset_summary
 ```
 
 ### Missing/Excluded Trials Offset (All)
-```{r na_offset_all, echo = FALSE}
+```{r na-offset-all, echo = FALSE}
 missing_offset <- checker(dt_offset, dt_ideal)
 missing_offset
 ```
@@ -118,7 +112,7 @@ missing_offset
 2. **some performances were removed because 1) participants didn't follow sheet music or 2) participants didn't finish till the end (5 trials)**
 
 ### Missing/Excluded Trials Offset (Summary)
-```{r na_offset_summary, echo = FALSE}
+```{r na-offset-summary, echo = FALSE}
 missing_offset_summary <- missing_offset[, .(N = .N), by = .(Reason)]
 missing_offset_summary
 ```
